# bayanihan_fund

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/bayanihan-fund/: Cargo.toml
contracts/bayanihan-fund/src/: lib.rs  test.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: FundDashboard.tsx  LandingPage.tsx  StellarWalletPanel.tsx
frontend/src/hooks/: useBayanihanFund.ts  useDemoFund.ts  useStellarWallet.ts
frontend/src/lib/: soroban.ts  stellar.ts  walletKit.ts
scripts/: deploy-testnet.ps1
